--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,11 +73,12 @@ header #logo {
     width: 100%;
     height: 400px;
     max-width: 350px;
-    bottom: 0;
+    bottom: -20px;
     right: 10vw;
     box-shadow: 0 0 2.1875rem rgba(140, 152, 164, .125);
     border-top-left-radius: 0.25rem;
     border-top-right-radius: 0.25rem;
+    box-shadow: 0 0 1.5em #000;
 }
 
 #register p {
@@ -105,6 +106,7 @@ header #logo {
 }
 
 #register button {
+    position: absolute;
     width: 100%;
     border: none;
     background-color: #e67e22;
@@ -112,6 +114,7 @@ header #logo {
     color: #fff;
     padding: .75rem;
     font-size: 1.2em;
+    bottom: -10px;
 }
 
 /** Main **/
